# Capsule

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml  release.yml  rootfs.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  capsule_runtime.cpp
app/src/main/cpp/dev/: dev_setup.c  dev_setup.h
app/src/main/cpp/namespace/: ns_enter.c  ns_enter.h
app/src/main/cpp/overlay/: overlay_mount.c  overlay_mount.h
app/src/main/cpp/pty/: pty_manager.c  pty_manager.h
app/src/main/cpp/squashfs/: squashfs_mount.c  squashfs_mount.h
app/src/main/kotlin/dev/capsule/: CapsuleApp.kt  MainActivity.kt
app/src/main/kotlin/dev/capsule/data/db/: AppDatabase.kt  ImageDao.kt  ImageEntity.kt  SessionEntity.kt
app/src/main/kotlin/dev/capsule/data/prefs/: AppPreferences.kt
app/src/main/kotlin/dev/capsule/di/: AppModule.kt
app/src/main/kotlin/dev/capsule/image/: ImageDownloader.kt  ImageManifest.kt  ImageManifestApi.kt  ImageRepository.kt
app/src/main/kotlin/dev/capsule/oci/: OciExtractor.kt  OciPuller.kt  OciRegistry.kt
app/src/main/kotlin/dev/capsule/runtime/: CapsuleRuntime.kt  PtyReader.kt  Session.kt  SessionManager.kt
app/src/main/kotlin/dev/capsule/ui/navigation/: NavHost.kt
app/src/main/kotlin/dev/capsule/ui/screens/home/: HomeScreen.kt  (+1 more)
app/src/main/kotlin/dev/capsule/ui/terminal/: TerminalView.kt
app/src/main/kotlin/dev/capsule/ui/theme/: Theme.kt  Type.kt
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gradle/: libs.versions.toml
(+8 files in other folders)
